// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FandomContentWell renders correctly with a children 1`] = `
<div
  className="wds-fandom-content-well "
>
  <strong>
    bold
  </strong>
   text
</div>
`;

exports[`FandomContentWell renders correctly with default values 1`] = `
<div
  className="wds-fandom-content-well "
/>
`;

exports[`FandomContentWell renders correctly with extra class name 1`] = `
<div
  className="wds-fandom-content-well extra-class-name"
/>
`;
